feat: improve menu with numeric options and show hints count