@@ -3,6 +3,8 @@ package ru.yandex.practicum;
 import ru.yandex.practicum.exception.GameException;
 import ru.yandex.practicum.exception.InvalidWordFormatException;
 import ru.yandex.practicum.exception.WordNotFoundInDictionaryException;
+import ru.yandex.practicum.game.Dictionary;
+import ru.yandex.practicum.game.WordMatcher;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -17,46 +19,41 @@ import java.util.Random;
  * </p>
  * <p>
  * Игрок имеет 6 попыток, чтобы угадать слово из 5 букв.
- * После каждого хода вычисляется подсказка с символами:
- * '+' — буква на правильной позиции,
- * '^' — буква есть в слове, но на другой позиции,
- * '-' — буквы нет в загаданном слове.
+ * После каждого хода вычисляется подсказка с помощью {@link WordMatcher}.
  * </p>
  */
 public class WordleGame {
     /** Максимальное количество попыток за игру */
     public static final int MAX_STEPS = 6;
 
-    /** Словарь допустимых слов */
-    private final WordleDictionary dictionary;
-    /** Загаданное слово (ответ) */
+    private final Dictionary dictionary;
+    private final WordMatcher matcher;
     private final String answer;
-    /** Количество оставшихся попыток */
     private int stepsLeft;
-    /** Список введённых слов-догадок */
     private final List<String> guesses = new ArrayList<>();
-    /** Список полученных подсказок для каждой догадки */
     private final List<String> hints = new ArrayList<>();
-    /** Счётчик использованных подсказок за текущую игру */
     private int hintsUsed;
 
     /**
      * Конструктор для новой игры со случайным словом из словаря.
      *
      * @param dictionary словарь, из которого выбирается загаданное слово
+     * @param matcher    алгоритм сравнения слов
      */
-    public WordleGame(WordleDictionary dictionary) {
-        this(dictionary, chooseRandomAnswer(dictionary));
+    public WordleGame(Dictionary dictionary, WordMatcher matcher) {
+        this(dictionary, matcher, chooseRandomAnswer(dictionary));
     }
 
     /**
      * Конструктор для тестирования, позволяющий задать конкретное загаданное слово.
      *
      * @param dictionary словарь для проверки допустимости слов
+     * @param matcher    алгоритм сравнения слов
      * @param answer     загаданное слово (должно быть в словаре)
      */
-    WordleGame(WordleDictionary dictionary, String answer) {
+    public WordleGame(Dictionary dictionary, WordMatcher matcher, String answer) {
         this.dictionary = dictionary;
+        this.matcher = matcher;
         this.answer = answer;
         this.stepsLeft = MAX_STEPS;
         this.hintsUsed = 0;
@@ -68,8 +65,8 @@ public class WordleGame {
      * @param dictionary словарь
      * @return случайное слово
      */
-    private static String chooseRandomAnswer(WordleDictionary dictionary) {
-        List<String> words = dictionary.getWords();
+    private static String chooseRandomAnswer(Dictionary dictionary) {
+        List<String> words = dictionary.getAllWords();
         return words.get(new Random().nextInt(words.size()));
     }
 
@@ -80,19 +77,24 @@ public class WordleGame {
      * @return строка-подсказка из символов +, ^, -
      * @throws InvalidWordFormatException      если слово имеет неверную длину (не 5 букв)
      * @throws WordNotFoundInDictionaryException если слово отсутствует в словаре
-     * @throws IllegalStateException           если игра уже завершена (победа или конец попыток)
+     * @throws IllegalStateException           если игра уже завершена
      */
     public String makeMove(String word) throws InvalidWordFormatException, WordNotFoundInDictionaryException {
         if (isFinished()) {
             throw new IllegalStateException("Игра уже завершена.");
         }
-        dictionary.validateWord(word);
+        // Валидация: если словарь не умеет валидировать, делаем сами
+        if (!(dictionary instanceof WordleDictionary)) {
+            if (word.length() != 5) throw new InvalidWordFormatException("Слово должно быть из 5 букв");
+            if (!dictionary.contains(word)) throw new WordNotFoundInDictionaryException(word);
+        } else {
+            ((WordleDictionary) dictionary).validateWord(word);
+        }
 
-        String hint = WordleDictionary.analyze(word, answer);
+        String hint = matcher.match(word, answer);
         guesses.add(word);
         hints.add(hint);
         stepsLeft--;
-
         return hint;
     }
 
@@ -112,7 +114,7 @@ public class WordleGame {
         if (candidates.isEmpty()) {
             throw new GameException("Нет подходящих слов для подсказки.");
         }
-        return candidates.getFirst();
+        return candidates.get(0);
     }
 
     /**
@@ -127,10 +129,10 @@ public class WordleGame {
     public List<String> getPossibleWords() {
         List<String> candidates = new ArrayList<>();
         outer:
-        for (String candidate : dictionary.getWords()) {
+        for (String candidate : dictionary.getAllWords()) {
             for (int i = 0; i < guesses.size(); i++) {
                 String expectedHint = hints.get(i);
-                String actualHint = WordleDictionary.analyze(guesses.get(i), candidate);
+                String actualHint = matcher.match(guesses.get(i), candidate);
                 if (!expectedHint.equals(actualHint)) {
                     continue outer;
                 }
@@ -166,52 +168,40 @@ public class WordleGame {
      *
      * @return количество догадок
      */
-    public int getStepsUsed() {
-        return guesses.size();
-    }
+    public int getStepsUsed() { return guesses.size(); }
 
     /**
      * Возвращает количество использованных подсказок в текущей игре.
      *
      * @return количество подсказок
      */
-    public int getHintsUsed() {
-        return hintsUsed;
-    }
+    public int getHintsUsed() { return hintsUsed; }
 
     /**
      * Возвращает количество оставшихся попыток.
      *
      * @return количество оставшихся попыток
      */
-    public int getStepsLeft() {
-        return stepsLeft;
-    }
+    public int getStepsLeft() { return stepsLeft; }
 
     /**
      * Возвращает загаданное слово.
      *
      * @return загаданное слово
      */
-    public String getAnswer() {
-        return answer;
-    }
+    public String getAnswer() { return answer; }
 
     /**
      * Возвращает неизменяемую копию списка всех догадок.
      *
      * @return список догадок
      */
-    public List<String> getGuesses() {
-        return List.copyOf(guesses);
-    }
+    public List<String> getGuesses() { return List.copyOf(guesses); }
 
     /**
      * Возвращает неизменяемую копию списка всех подсказок.
      *
      * @return список подсказок
      */
-    public List<String> getHints() {
-        return List.copyOf(hints);
-    }
+    public List<String> getHints() { return List.copyOf(hints); }
 }
